==================

Version 3.0.0 (unreleased)
--------------------------
 * Increase CMake requirement to version 3.16.0.
 * Port to Qt6 (in-progress)
 * Network operations now optionally allow capturing HTTP response body
 * Remove the 3D Widget Inspector View
 * Remove the experimental VTK-based Object Visualizer
 * Update backward-cpp to version 1.6
 * Update lz4 to version 1.9.4

Version 2.11.3
--------------
 * Increase CMake requirement to version 3.4.0 (reflecting reality).
 * Update 3rdparty/StackWalker.
 * Update 3rdparty/backward-cpp.
 * Don't fail self-test for lldb version 10.x.
 * Support for CMAKE_SYSTEM_PROCESSOR amd64.
 * Fix crash when editing the margins property of a QtCharts/ChartView.
 * Fix crash when attaching to an ASAN-enabled application.
 * Register stream operators for Qt::CaseSensitivity.
 * Clean some runtime, compile , CMake warnings, etc.

Version 2.11.2
--------------
 * Prefer picking QtQuick items in fully visible parent-child chains.
 * Fix deadlock with Qt 5.15 on high DPI screens.
 * Fix QtQuick detection on older macOS versions.
 * Support for Qt 5.15.

Version 2.11.1
--------------
 * Add OpenGL ES2 fallback for the Qt3D geometry inspector.
 * Fix assert on empty text document selections.
 * Fix side-effects of using the widget layout overlay on a QSplitter.
 * Fix merging of events in the event monitor.
 * Fix event order in the event monitor.
 * Add event propagation detection for QtQuick pointer events.
 * Fix compilation with QT_NO_OPENGL and QT_NO_SSL.
 * Adapt QtQuick software renderer inspector to changes in Qt 5.14.
 * Fix Android support with Qt 5.14.
 * Fix memory leak in event recording when Qt Quick remote view is active.
 * Fix possible crash during probe destruction.
 * Fix crash due to signal spy changes in Qt 5.14.
 * Fix possible crash in the outbound connections view.

Version 2.11.0
--------------
 * Drop support for Qt 4 and Qt <= 5.4.
 * Drop support for MSVC 2010 and MSVC 2012, as well as GCC < 4.8.